# ncaa-baseball

./: README.md  flake.nix  ncaa-baseball.cabal
app/: Main.hs
lib/NCAA/Baseball/: Teams.hs
src/NCAA/: Baseball.hs
src/NCAA/Baseball/: Database.hs  Internal.hs  Teams.hs
src/NCAA/Baseball/Teams/: Roster.hs  Stats.hs
