cabal-version:      3.0
name:               ncaa-baseball
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Sean O'Mara
maintainer:         mseanomara@gmail.com
category:           Sports
synopsis:           Library for accessing NCAA baseball statistics
build-type:         Simple

common common-extensions
    default-language:   Haskell2010

common common-ghc-options
    ghc-options:  -Wall -O2 -threaded

library
    import:           common-ghc-options
                    , common-extensions
    exposed-modules:  NCAA.Baseball
                    , NCAA.Baseball.Teams
                    , NCAA.Baseball.Teams.Roster
                    , NCAA.Baseball.Teams.Stats
                    , NCAA.Baseball.Database
    other-modules:    NCAA.Baseball.Internal
    build-depends:    base ^>=4.18.2.1
                    , text
                    , bytestring
                    , http-conduit
                    , scalpel
                    , containers
                    , sqlite-simple
                    , async
    hs-source-dirs:   src

executable ncaa-db
    import:           common-ghc-options
                    , common-extensions
    main-is:          Main.hs
    hs-source-dirs:   app
    ghc-options:      -with-rtsopts=-N
    build-depends:    base ^>=4.18.2.1
                    , ncaa-baseball
